--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge"
     <meta name="viewport" content="width=device-width
     , initial-scale=1.0">
     <title>ICVRO</title>
@@ -235,7 +236,7 @@
         onclick="location.href='./#projects'"
         />
     </section>
-    <section id="projects">
+   <!-- <section id="projects">
         <p class="section_text_p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
@@ -296,13 +297,14 @@
             </div>
         </div>
         </div>
+        </section>
         <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
         />
-    </section>
+    </section>-->
     <section id="contact">
         <p class="section_text_p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
