--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge"
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width
     , initial-scale=1.0">
     <title>ICVRO</title>
@@ -45,15 +45,11 @@
             <p class="section_text_p1">Hello, I'm</p>
             <h1 class="title">Jonas Vivarelli</h1>
             <p class="section_text_p2">Frontend Developer</p>
-            <div class="btn-container">
-                <button 
-                    class="btn btn-color-2" 
-                    onclick="window.open('./assets/resume.pdf')"
-                    >Download CV</button>
-                    <button 
+            <div class="btn-container">   
+                 <button 
                     class="btn btn-color-1" 
                     onclick="location.href='./#contact'"
-                    >Contact Info</button>
+                 >Contact Info</button>
             </div>
 
             <!-- ADD SOCIAL MEDIA HERE-->
@@ -80,7 +76,7 @@
                 alt="Profile Picture"
                 class="about-pic"/>
             </div>
-            <div class="about-details-container">
+            <!--<div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
                         <img 
@@ -89,7 +85,7 @@
                         class="icon"
                         />
                         <h3>Experience</h3>
-                        <p>1 Year<br>Frontend Development<br>1 Year <br>Godot Game Development</p>
+                        <p>2 Year<br> Frontend Development<br> <br>1 Year <br>Godot Game Development</p>
                     </div>
                      <div class="details-container">
                             <img 
@@ -98,11 +94,11 @@
                             class="icon"
                             />
                             <h3>Education</h3>
-                            <p>Agrario<br>Hotelfachmann<br>Freecodecamp Certificates</p>
-                        </div>
+                            <p><br>self taught  on Freecodecamp whit Certificates and Codecademy</p>
+                        </div> -->
                     
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem debitis iusto, enim necessitatibus praesentium vitae ad accusamus maxime eligendi dignissimos, est, dolorem officiis! Et, quam! Ex et molestiae doloribus doloremque numquam? Ullam rem illo ducimus nam molestiae rerum. Tempora repellendus pariatur architecto ducimus in accusamus nostrum magni ea facere?</p>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, soluta dicta numquam placeat inventore esse quidem sint, sed non corporis ullam nemo. Veniam libero eum qui sapiente quia, illum est!</p>
                 </div>
             </div>
         </div>
@@ -119,7 +115,7 @@
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title">Web Development</h2>
                     <div class="article-container">
                         <article>
                             <img 
@@ -154,6 +150,11 @@
                                 <p>Basic</p>
                             </div>
                         </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Other Languages</h2>
+                    <div class="article-container">
                         <article>
                             <img 
                             src="./assets/checkmark.png"
@@ -172,56 +173,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Godot GameEngine</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Backend Development</h2>
-                    <div class="article-container">
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png"
-                            alt="experience icon"
-                            class="icon"
-                            />
-                            <div>
-                                <h3>PostgreSQL</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png"
-                            alt="experience icon"
-                            class="icon"
-                            />
-                            <div>
-                                <h3>NODE JS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png"
-                            alt="experience icon"
-                            class="icon"
-                            />
-                            <div>
-                                <h3>Express Js</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png"
-                            alt="experience icon"
-                            class="icon"
-                            />
-                            <div>
-                                <h3>Git</h3>
+                                <h3>GDScript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
