--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         onclick="location.href='./#projects'"
         />
     </section>
-   <!-- <section id="projects">
+     <section id="projects">
         <p class="section_text_p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
@@ -198,28 +198,29 @@
                     <img 
                     src="./assets/project-1.png"
                     alt="Project 1"
-                    class="project-img"
+                    class="project-img project1"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
+                <h2 class="experience-sub-title project-title">Il Palazzo</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/51C80Y/IlPalazzo2.git'">
                         Github
                     </button>
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                        Live Demo
+                        Live
                     </button>
                 </div>
             </div>
-            <div class="details-container color-container">
+          <div class="details-container color-container">
                 <div class="article-container">
-                    <img 
+                   <!--   <img 
                     src="./assets/project-2.png"
                     alt="Project 2"
                     class="project-img"
-                    />
+                    />-->
                 </div>
                 <h2 class="experience-sub-title project-title">Project Two</h2>
+                <p>In Progress</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
                         Github
@@ -231,13 +232,14 @@
             </div>
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img 
+                    <!--  <img 
                     src="./assets/project-3.png"
                     alt="Project 3"
                     class="project-img"
-                    />
+                    />-->
                 </div>
                 <h2 class="experience-sub-title project-title">Project Three</h2>
+                <p>In Progress</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
                         Github
@@ -249,14 +251,13 @@
             </div>
         </div>
         </div>
-        </section>
         <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
         />
-    </section>-->
+    </section>
     <section id="contact">
         <p class="section_text_p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
