Finished page: ready for publication

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>ICVRO</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" type="image/x-icon" href="/assets/logo.jpeg">
 </head>
 <body>
     <nav id="desktop-nav">
@@ -98,7 +99,15 @@
                         </div> -->
                     
                 <div class="text-container">
-                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, soluta dicta numquam placeat inventore esse quidem sint, sed non corporis ullam nemo. Veniam libero eum qui sapiente quia, illum est!</p>
+                    <p class="text">
+                        Born and Raised in Italy, I moved to Germany in 2018 for better work opportunties. After six years of carreer in different hotels,
+                        I decided to start learn something new, so one day I could work for myself, and do things my way.<br>
+                        Since I was always fascinated by any sort of code, and I really liked the idea of becoming a Developer,
+                        I started learning responsive web design on free course pages like Freecodecamp, Codecademy, W3schools
+                        and a lot of Youtube.<br>
+                        Now, after two and a half years of practicing varius languages and private projects, for example, a Super Mario type game in GDScript,<br>
+                        I feel confident enough to set up myself, open to help people build their dreams, and improve myself along the way!
+                    </p>
                 </div>
             </div>
         </div>
