--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="text-container">
                     <p class="text">
                         Born and Raised in Italy, I moved to Germany in 2018 for better work opportunties. After six years of carreer in different hotels,
-                        I decided to start learn something new, so one day I could work for myself, and do things my way.<br>
+                        I decided to start learning something new, so one day I could work for myself, and do things my way.<br>
                         Since I was always fascinated by any sort of code, and I really liked the idea of becoming a Developer,
                         I started learning responsive web design on free course pages like Freecodecamp, Codecademy, W3schools
                         and a lot of Youtube.<br>
