--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/project-1.png"
+                    src="./assets/project1.PNG"
                     alt="Project 1"
                     class="project-img project1"
                     />
