--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
                 <h2 class="experience-sub-title project-title">Il Palazzo</h2>
                 <p>Presentation and contact Website for an Italian Bed&Breakfast. this was my first order, and I felt really accomplished whit the result.
-                    still, I very often come back to adjust or update parts, whe i gain new knlowledge to applay.
+                    still, I very often come back to adjust or update parts, whe i gain new knlowledge to apply.
                 </p>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/51C80Y/IlPalazzo2.git'">
