--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         Since I was always fascinated by any sort of code, and I really liked the idea of becoming a Developer,
                         I started learning responsive web design on free course pages like Freecodecamp, Codecademy, W3schools
                         and a lot of Youtube.<br>
-                        Now, after two and a half years of practicing varius languages and private projects, for example, a Super Mario type game in GDScript,<br>
+                        Now, after two and a half years of practicing various languages and private projects, for example, a Super Mario type game in GDScript,<br>
                         I feel confident enough to set up myself, open to help people build their dreams, and improve myself along the way!
                     </p>
                 </div>
@@ -211,8 +211,8 @@
                     />
                 </div>
                 <h2 class="experience-sub-title project-title">Il Palazzo</h2>
-                <p>Presentation and contact Website for an Italian Bed&Breakfast. this was my first order, and I felt really accomplished whit the result.
-                    still, I very often come back to adjust or update parts, whe i gain new knlowledge to apply.
+                <p>Presentation and contact Website for an Italian Bed&Breakfast. this was my first order, and I felt really accomplished with the result.
+                    still, I very often come back to adjust or update parts, when I gain new knowledge to apply.
                 </p>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/51C80Y/IlPalazzo2.git'">
