--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/51C80Y/IlPalazzo2.git'">
                         Github
                     </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://ilpalazzolefornaci.netlify.app/main'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://ilpalazzolefornaci.com'">
                         Live
                     </button>
                 </div>
