update and new project

--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
                     />
                 </div>
                 <h2 class="experience-sub-title project-title">Il Palazzo</h2>
-                <p>Presentation and contact Website for an Italian Bed&Breakfast. this was my first order, and I felt really accomplished with the result.
+                <p>Presentation and contact Website for an Italian Family Bed&Breakfast. this was my first order, and I felt really accomplished with the result.
+                    it involves a lot of spaghetti code, and reading it may be hard sometimes. since the i learned to work more organized, and keep everything in
+                    named folders, makes the work easier.
                     still, I very often come back to adjust or update parts, when I gain new knowledge to apply.
                 </p>
                 <div class="btn-container">
@@ -225,20 +227,21 @@
             </div>
           <div class="details-container color-container">
                 <div class="article-container">
-                   <!--   <img 
-                    src="./assets/project-2.png"
+                      <img 
+                    src="./assets/Project2.PNG"
                     alt="Project 2"
-                    class="project-img"
-                    />-->
+                    class="project-img project2"
+                    />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
-                <p>coming soon</p>
+                <h2 class="experience-sub-title project-title">GDScript</h2>
+                <p>I also spent a couple of months studying GDScript and writing the code for a couple of games following various tutorials and courses. 
+                    After putting a fair amount of effort and a couple of sleepless nights,
+                    I got a half backed result, and decided to leave it at it is, since i wanted to focus more on Web Development.
+                    Still, it helped me a lot by giving a more broad understanding in the programming languages and how the "generally" work.
+                    Right after this project, i started focusing in learning an deepening my knownledge in JavaScript.</p>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/51C80Y/GDScript'">
                         Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                        Live Demo
                     </button>
                 </div>
             </div>
